// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System|CheckBox CheckBox with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-ik8tl5-CheckBox"
            disabled={false}
            id="styled-checkbox-_n6vt0k.7q"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vt0k.7q"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Not checked single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-jah58l-CheckBox"
            disabled={false}
            id="styled-checkbox-_n6vt0n.u0"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vt0n.u0"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Checked Single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-jah58l-CheckBox"
            disabled={true}
            id="styled-checkbox-_n6vt0o.3a"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vt0o.3a"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Disabled single
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-4t51wx-CheckBox"
            disabled={false}
            id="styled-checkbox-_n6vt0q.px"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vt0q.px"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-91aixk-CheckBox"
            disabled={false}
            id="styled-checkbox-_n6vt0r.je"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vt0r.je"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Not checked intermediate
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-4t51wx-CheckBox"
            disabled={true}
            id="styled-checkbox-_n6vt0t.cy"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vt0t.cy"
          />
        </span>
        <span
          className="css-m4bvhz-CheckBox"
        >
          Disabled checked intermediate
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System|CheckBox CheckBox without 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-jah58l-CheckBox"
            disabled={false}
            id="styled-checkbox-_n6vszb.n4"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vszb.n4"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-ik8tl5-CheckBox"
            disabled={false}
            id="styled-checkbox-_n6vszi.1i"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vszi.1i"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={true}
            className="css-4t51wx-CheckBox"
            disabled={false}
            id="styled-checkbox-_n6vszq.k5"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vszq.k5"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-u4dw6y-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-91aixk-CheckBox"
            disabled={false}
            id="styled-checkbox-_n6vszx.8p"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vszx.8p"
          />
        </span>
      </span>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <span
        className="css-1mci7ch-CheckBox"
      >
        <span
          className="css-124gikp-CheckBox"
        >
          <input
            checked={false}
            className="css-91aixk-CheckBox"
            disabled={true}
            id="styled-checkbox-_n6vt00.6y"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            htmlFor="styled-checkbox-_n6vt00.6y"
          />
        </span>
      </span>
    </div>
  </div>
</div>
`;
